force-app/main/default/objects/AppointmentLineItem__c/AppointmentLineItem__c.object-meta.xml
<CustomObject>
    <description>Material Line Item  related to the appointment</description>
    <label>Appointment Line Item</label>
    <nameField>
        <displayFormat>ALI-{00000}</displayFormat>
        <label>Line Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>