force-app/main/default/objects/AppointmentLineItem__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <inlineHelpText>Appointment the line item belongs to</inlineHelpText>
    <label>Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>AppointmentLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>