force-app/main/default/objects/AppointmentLineItem__c/fields/BatchMaterialExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>BatchMaterialExpirationDate__c</fullName>
    <inlineHelpText>Expiry date of the material</inlineHelpText>
    <label>Batch Material Expiration Date</label>
    <type>DateTime</type>
</CustomField>