force-app/main/default/objects/AppointmentLineItem__c/fields/BatchNumber__c.field-meta.xml
<CustomField>
    <fullName>BatchNumber__c</fullName>
    <inlineHelpText>Batch Id of the material</inlineHelpText>
    <label>Batch Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>