force-app/main/default/objects/AppointmentLineItem__c/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <formula>Appointment__r.Case__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case ID</label>
    <type>Text</type>
</CustomField>