force-app/main/default/objects/AppointmentLineItem__c/fields/Cryobag_ID__c.field-meta.xml
<CustomField>
    <fullName>Cryobag_ID__c</fullName>
    <description>Cryobag ID</description>
    <inlineHelpText>Cryobag ID</inlineHelpText>
    <label>Cryobag ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>