force-app/main/default/objects/AppointmentLineItem__c/fields/CryobagNumber__c.field-meta.xml
<CustomField>
    <fullName>CryobagNumber__c</fullName>
    <description>CryobagNumber</description>
    <inlineHelpText>CryobagNumber</inlineHelpText>
    <label>Cryobag #</label>
    <length>200</length>
    <type>Text</type>
</CustomField>