force-app/main/default/objects/AppointmentLineItem__c/fields/DateOfManufacture__c.field-meta.xml
<CustomField>
    <fullName>DateOfManufacture__c</fullName>
    <inlineHelpText>Manufacturing date of the material</inlineHelpText>
    <label>Date Of Manufacture</label>
    <type>DateTime</type>
</CustomField>