force-app/main/default/objects/AppointmentLineItem__c/fields/DIN_Apheresis_ID__c.field-meta.xml
<CustomField>
    <fullName>DIN_Apheresis_ID__c</fullName>
    <description>DIN/Apheresis ID</description>
    <inlineHelpText>DIN/Apheresis ID</inlineHelpText>
    <label>DIN/Apheresis ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>