force-app/main/default/objects/AppointmentLineItem__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Line item&#39;s material number</inlineHelpText>
    <label>Material</label>
    <referenceTo>Material__c</referenceTo>
    <relationshipLabel>Appointment Line Items</relationshipLabel>
    <relationshipName>AppointmentLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>