force-app/main/default/objects/AppointmentLineItem__c/fields/Nucleated_Cell_Count__c.field-meta.xml
<CustomField>
    <fullName>Nucleated_Cell_Count__c</fullName>
    <description>Nucleated Cell Count</description>
    <inlineHelpText>Nucleated Cell Count</inlineHelpText>
    <label>Nucleated Cell Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>