force-app/main/default/objects/AppointmentLineItem__c/fields/To_Be_Shipped__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Shipped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Be Shipped</description>
    <inlineHelpText>To Be Shipped</inlineHelpText>
    <label>To Be Shipped</label>
    <type>Checkbox</type>
</CustomField>