force-app/main/default/objects/AppointmentLineItem__c/fields/TotalVolumePerBag__c.field-meta.xml
<CustomField>
    <fullName>TotalVolumePerBag__c</fullName>
    <description>Total Volume per bag (ml)</description>
    <inlineHelpText>Total Volume per bag (ml)</inlineHelpText>
    <label>Total Volume per bag (ml)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>