force-app/main/default/objects/AppointmentLineItem__c/fields/UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>UnitOfMeasure__c</fullName>
    <label>Unit Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NC/kg</fullName>
            </value>
            <value>
                <fullName>TNC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>